Pass created ts in inArt object
